sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: eshop-cart-app
  namespace: default
spec:
  containers:
    image: busybox
    imagePullPolicy: Always
    name: cart-app
    resources: {}
    volumeMounts:
    - mountPath: /var/log
      name: varlog
  - image: busybox
    name: price
    command: ['/bin/sh', '-c', 'tail -n+1 -f /var/log/cart-app.log']
    volumeMounts:
    - name: varlog
      mountPath: /var/log
  volumes:
  - emptyDir: {}
    name: varlog
